k8s/apps/default/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  selector:
    matchLabels:
      app: sabnzbd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      hostname: sabnzbd
      volumes:
        - name: incomplete
          emptyDir: {}
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      nodeSelector:
        nas: local
      containers:
        - name: sabnzbd
          image: ghcr.io/onedr0p/sabnzbd:4.2.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: &ram 4Gi
              cpu: 2000m
            limits:
              memory: *ram
          ports:
            - containerPort: 8080
              name: web
          volumeMounts:
            - name: incomplete
              mountPath: /tmp/incomplete
            - name: config
              mountPath: /config
              readOnly: false
            - name: arr-media
              mountPath: /data
          startupProbe:
            httpGet:
              path: /api?mode=version
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api?mode=version
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
