k8s/apps/default/sabnzbd/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  selector:
    matchLabels:
      app: sabnzbd
  serviceName: sabnzbd
  volumeClaimTemplates:
    - metadata:
        name: sabnzbd-config
      spec:
        storageClassName: ceph-block
        resources:
          requests:
            storage: 2Gi
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOnce
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      hostname: sabnzbd
      volumes:
        - name: incomplete
          emptyDir: {}
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      nodeSelector:
        nas: local
      containers:
        - name: sabnzbd
          image: ghcr.io/onedr0p/sabnzbd:rolling@sha256:fd8695c1f3829f628220078c4aa11a82087f928ae5ed5ec3983c3dafff438396
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 8192Mi
              cpu: 2000m
            limits:
              memory: 8192Mi
          ports:
            - containerPort: 8080
              name: web
          volumeMounts:
            - name: incomplete
              mountPath: /tmp/incomplete
            - name: sabnzbd-config
              mountPath: /config
              readOnly: false
            - name: arr-media
              mountPath: /data
          startupProbe:
            httpGet:
              path: /api?mode=version
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api?mode=version
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
