k8s/apps/default/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sabnzbd
  name: sabnzbd
spec:
  selector:
    app: sabnzbd
  type: ClusterIP
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      targetPort: web
      protocol: TCP
